--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_install:
  - go get github.com/modocache/gover
 
 script:
- - $HOME/gopath/bin/ginkgo -r  -cover -coverpkg=./... -trace -race
+ - $HOME/gopath/bin/ginkgo -r  -cover -coverpkg=./.,./services/... -trace -race
  - $HOME/gopath/bin/gover
  - $HOME/gopath/bin/goveralls -coverprofile=gover.coverprofile -repotoken 5lTOPeAe3YzQuxISzXByVBHIjefWvkeMh
