--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,11 +28,11 @@ jobs:
       - run: go get github.com/kardianos/govendor
 
       - run: go get github.com/mitchellh/gox
-      - run: go golang.org/x/tools/cmd/cover
-      - run: go github.com/axw/gocov/gocov
-      - run: go github.com/mattn/goveralls
-      - run: go github.com/onsi/ginkgo/ginkgo
-      - run: go github.com/modocache/gover
+      - run: go get golang.org/x/tools/cmd/cover
+      - run: go get github.com/axw/gocov/gocov
+      - run: go get github.com/mattn/goveralls
+      - run: go get github.com/onsi/ginkgo/ginkgo
+      - run: go get github.com/modocache/gover
 
       - run: govendor sync
 
@@ -43,9 +43,9 @@ jobs:
 
       - run: gox -os="linux"
 
-      - run: $HOME/gopath/bin/ginkgo -r  -cover -trace -race
-      - run: $HOME/gopath/bin/gover
-      - run: $HOME/gopath/bin/goveralls -coverprofile=gover.coverprofile -repotoken 5lTOPeAe3YzQuxISzXByVBHIjefWvkeMh
+      - run: ginkgo -r  -cover -trace -race
+      - run: gover
+      - run: goveralls -coverprofile=gover.coverprofile -repotoken 5lTOPeAe3YzQuxISzXByVBHIjefWvkeMh
 
       - setup_remote_docker
 
