--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           - vendor-dependencies
 
       - run: go get github.com/kardianos/govendor
-
+      - run: go get github.com/stretchr/testify
       - run: go get github.com/mitchellh/gox
       - run: go get golang.org/x/tools/cmd/cover
       - run: go get github.com/axw/gocov/gocov
