Added Circle-CI badge

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,14 +25,16 @@ jobs:
           keys:
           - vendor-dependencies
 
-      - run: go get github.com/kardianos/govendor
-      - run: go get github.com/smartystreets/goconvey/
-      - run: go get github.com/mitchellh/gox
-      - run: go get golang.org/x/tools/cmd/cover
-      - run: go get github.com/axw/gocov/gocov
-      - run: go get github.com/mattn/goveralls
-      - run: go get github.com/onsi/ginkgo/ginkgo
-      - run: go get github.com/modocache/gover
+      - run: |
+                go get github.com/kardianos/govendor
+                go get github.com/smartystreets/goconvey
+                go get github.com/mitchellh/gox
+                go get golang.org/x/tools/cmd/cover
+                go get github.com/axw/gocov/gocov
+                go get github.com/mattn/goveralls
+                go get github.com/stretchr/testify
+                go get github.com/onsi/ginkgo/ginkgo
+                go get github.com/modocache/gover
 
       - run: govendor sync
 
